--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -61,7 +61,7 @@
   <header class="mb-auto mx-10 mt-0">
     <nav class="navbar px-5 navbar-expand-lg navbar-dark backgroundmenu">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img class="navbarlogo" src=""><b>Test2Impress</b></a>
+            <a class="navbar-brand" href="#"><img class="navbarlogo" src="{{ home.logo.url }}"><b>Test2Impress</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -79,12 +79,14 @@
   </header>
 
   <!-- Page -->
-  <img class="d-flex w-50 h-50 p-5 mx-10" src="{{ homeinfo.background.url ]}">
+  {% for home in homes.all%}
+  <img class="d-flex w-50 h-50 p-5 mx-10" src="{{ home.background.url ]}">
   <main class="px-3">
-    <h1>Welcome to Test2Impress</h1>
+    <h1>Welcome to {{home.title}}</h1>
     <p class="lead"></p>
     <p class="lead">
       <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Go Explore!</a>
+  {% endfor%}
     </p>
   </main>
   <!-- Footer -->
