--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -42,14 +42,108 @@
       }
       
       .backgroundmenu {
-          background: #04050d;
+        background: #7d8c8400;
       }
       .backgroundmain {
-          background: #7D8C84;
+        background: #7d8c84;
       }
+      
+      @font-face {
+        font-family: "House Slant";
+        src: url("HouseSlant.woff2") format("woff2"),
+        url("HouseSlant.woff") format("woff");
+        font-style: normal;
+        font-weight: 400;
+        font-stretch: normal;
+      }
+      
+      .main_nav {
+        display: none;
+      }
+
+/* Animatie import https://codepen.io/onediv/pen/BprVzp*/
+
+      body{
+        background: rgba(218,218,218,1)
+      }
+
+      a{
+        color: #111
+      }
+      a:visited {
+        color: #111
+      }
+      a:hover {
+        color: #111
+      }
+
+      .photo{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: block;
+      }
+
+      .photo img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: grayscale(100%) contrast(120%);
+        box-shadow: 10px 15px 25px 0 rgba(0,0,0,.2);
+        display: block;
+        transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+        margin-top: -10px;
+      }
+
+      .photo:hover img{
+        box-shadow: 1px 1px 10px 0 rgba(0,0,0,.1);
+      }
+
+      .photo .glow-wrap{
+        overflow: hidden;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        margin-top: -10px;
+      }
+
+      .photo .glow{
+        display: block;
+        position:absolute;
+        width: 40%;
+        height: 200%;
+        background: rgba(255,255,255,.2);
+        top: 0;
+        filter: blur(5px);
+        transform: rotate(45deg) translate(-450%, 0);
+        transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+      }
+
+      .photo:hover .glow{
+        transform: rotate(45deg) translate(450%, 0);
+        transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+      }
+
+      .photo:hover img,
+      .photo:hover .glow-wrap{
+        margin-top: 0;
+      }
+
+
+      h1{
+        position: absolute;
+        z-index: 1;
+        transform: translate(-25%, -65%);
+        font-family: 'Montserrat', sans-serif;
+        margin: 0;
+        line-height: 1.2;
+        color: rgb(255, 255, 255);
+      }
+      /* End Import */
     </style>
 
-    
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/5.1/examples/cover/cover.css" rel="stylesheet">
   </head>
@@ -59,9 +153,9 @@
     {% for home in homes.all %}  
     <!-- Menu -->
   <header class="mb-auto mx-10 mt-0">
-    <nav class="navbar px-5 navbar-expand-lg navbar-dark backgroundmenu">
+    <nav class="navbar px-5 navbar-expand-lg navbar-dark backgroundmenu invisible">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img class="navbarlogo" src="{{ home.logo.url }}"><b>Test2Impress</b></a>
+            <a class="navbar-brand" href="#"><!--<img class="navbarlogo" src="{{home.logo.url}}" height=50px>--><b>Test2Impress</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -79,15 +173,15 @@
   </header>
 
   <!-- Page -->
-  
-  <img class="img-fluid" src="{{ home.background.url }}"><title>Placeholder</title><img>
-  <main class="px-3">
-    <h1>Welcome to {{home.title}}</h1>
-    <p class="lead"></p>
-    <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Go Explore!</a>
-  {% endfor %}
-    </p>
+  <a href="#" class="photo">
+    <!--<h1>{{home.title}}</h1> -->
+      <img src="{{home.background.url}}" />
+    <div class="glow-wrap">
+      <i class="glow"></i>
+    </div>
+  </a>
+      {% endfor %}
+    
   </main>
   <!-- Footer -->
   <footer class="mt-auto text-black-50">
@@ -96,8 +190,7 @@
 </div>
 
 <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
 
-    
-  </body>
+</body>
 </html>
