--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -173,7 +173,7 @@
   </header>
 
   <!-- Page -->
-  <a href="#" class="photo">
+  <a href="{% url 'menu' %}" class="photo">
     <!--<h1>{{home.title}}</h1> -->
       <img src="{{home.background.url}}" />
     <div class="glow-wrap">
