--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -14,16 +14,16 @@
     
 
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
-<meta name="theme-color" content="#7952b3">
+        <!-- Favicons -->
+    <link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json">
+    <link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
+    <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
+    <meta name="theme-color" content="#7952b3">
 
 
     <style>
@@ -55,10 +55,6 @@
         font-style: normal;
         font-weight: 400;
         font-stretch: normal;
-      }
-      
-      .main_nav {
-        display: none;
       }
 
 /* Animatie import https://codepen.io/onediv/pen/BprVzp*/
@@ -148,49 +144,47 @@
     <link href="https://getbootstrap.com/docs/5.1/examples/cover/cover.css" rel="stylesheet">
   </head>
 
-<body class="d-flex h-100 w-100 text-center text-white backgroundmain">
-  <div class="d-flex w-100 h-100 p-0 mx-auto flex-column">    
-    {% for home in homes.all %}  
-    <!-- Menu -->
-  <header class="mb-auto mx-10 mt-0">
-    <nav class="navbar px-5 navbar-expand-lg navbar-dark backgroundmenu invisible">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><!--<img class="navbarlogo" src="{{home.logo.url}}" height=50px>--><b>Test2Impress</b></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-auto">
-                    <a class="nav-link active px-2" aria-current="page" href="#">Home</a>
-                    <a class="nav-link px-2" href="#">Who are we</a>
-                    <a class="nav-link px-2" href="#">What do we offer</a>
-                    <a class="nav-link px-2" href="#">What did we do</a>
-                    <a class="nav-link px-2" href="#">Where to find us</a>
+  <body class="d-flex h-100 w-100 text-center text-white backgroundmain">
+    <div class="d-flex w-100 h-100 p-0 mx-auto flex-column">    
+      <!-- Menu -->
+      <header class="mb-auto mx-10 mt-0">
+        <nav class="navbar px-5 navbar-expand-lg navbar-dark backgroundmenu invisible">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><!--<img class="navbarlogo" src="{{home.logo.url}}" height=50px>--><b>Test2Impress</b></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto">
+                        <a class="nav-link active px-2" aria-current="page" href="#">Home</a>
+                        <a class="nav-link px-2" href="#">Who are we</a>
+                        <a class="nav-link px-2" href="#">What do we offer</a>
+                        <a class="nav-link px-2" href="#">What did we do</a>
+                        <a class="nav-link px-2" href="#">Where to find us</a>
+                    </div>
                 </div>
             </div>
+        </nav>
+      </header>
+        {% for home in homes.all %}  
+      <!-- Page -->
+      <a href="{% url 'menu' %}" class="photo">
+        <!--<h1>{{home.title}}</h1> -->
+          <img src="{{home.background.url}}" />
+        <div class="glow-wrap">
+          <i class="glow"></i>
         </div>
-    </nav>
-  </header>
-
-  <!-- Page -->
-  <a href="{% url 'menu' %}" class="photo">
-    <!--<h1>{{home.title}}</h1> -->
-      <img src="{{home.background.url}}" />
-    <div class="glow-wrap">
-      <i class="glow"></i>
-    </div>
-  </a>
-      {% endfor %}
+      </a>
+        {% endfor %}
+      </div>
+        <!-- Footer -->
+      <footer class="mt-auto text-center text-black-50 ">
+        <p>&copy;<a href="https://www.Test2Impress.be/" class="text-black">Test2Impress</a> - {% now "Y" %}</p>
+      </footer>
     
-  </main>
-  <!-- Footer -->
-  <footer class="mt-auto text-black-50">
-    <p>&copy;<a href="https://www.Test2Impress.be/" class="text-black">Test2Impress</a> - {% now "Y" %}.</p>
-  </footer>
-</div>
 
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
 
 </body>
 </html>
