--- a/homepage/templates/homepage/menu.html
+++ b/homepage/templates/homepage/menu.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
-    <title>Product example for Bootstrap</title>
+    <title>Test2Impress - This is what we do</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/product/">
 
@@ -37,7 +37,7 @@
       }
 </style>
 </head>
-  <body>
+  <body> 
     <nav class="navbar px-5 navbar-expand-lg backgroundmenu navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="navbarlogo" src="{{home.logo.url}}" height=50px><b>Test2Impress</b></a>
@@ -67,7 +67,7 @@
       <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
     </div>
 
-    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+    <div class="d-md-flex flex-md-equal w-100 my-md-0 pl-md-0">
       <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
         <div class="my-3 py-3">
           <h2 class="display-5">Another headline</h2>
@@ -75,7 +75,7 @@
         </div>
         <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
       </div>
-      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+      <div class="bg-light mr-md-0 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
         <div class="my-3 p-3">
           <h2 class="display-5">Another headline</h2>
           <p class="lead">And an even wittier subheading.</p>
@@ -83,13 +83,12 @@
         <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
       </div>
     </div>
-
+     
     <!--Footer -->
-    <footer class="mt-auto text-black-50">
-        <p>&copy;<a href="https://www.Test2Impress.be/" class="text-black">Test2Impress</a> - {% now "Y" %}.</p>
+    <footer class="d-flex text-center backgroundmenu text-white-50">
+        <p>&copy;<a href="https://www.Test2Impress.be/" class="text-white-50">Test2Impress</a> - {% now "Y" %}.</p>
     </footer>
-
-
+</body>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -105,5 +104,4 @@
         text: 'Thumbnail'
       });
     </script>
-  </body>
 </html>
