--- a/homepage/templates/homepage/menu.html
+++ b/homepage/templates/homepage/menu.html
@@ -70,12 +70,13 @@
     <div class="d-md-flex flex-md-equal w-100 my-md-0 pl-md-0">
       <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
         <div class="my-3 py-3">
-          <h2 class="display-5">Another headline</h2>
-          <p class="lead">And an even wittier subheading.</p>
+          <h2 class="display-5">Test2<b>Impress</b></h2>
+          <p class="lead"><b>Impress</b> your customers with a unique website!</p>
         </div>
-        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-      </div>
-      <div class="bg-light mr-md-0 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+      <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"><img src="{% static 'Miniwebsite.jpg' %}"></div>
+    </div>
+    
+    <div class="bg-light mr-md-0 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
         <div class="my-3 p-3">
           <h2 class="display-5">Another headline</h2>
           <p class="lead">And an even wittier subheading.</p>
@@ -85,8 +86,8 @@
     </div>
      
     <!--Footer -->
-    <footer class="d-flex text-center backgroundmenu text-white-50">
-        <p>&copy;<a href="https://www.Test2Impress.be/" class="text-white-50">Test2Impress</a> - {% now "Y" %}.</p>
+    <footer class="d-flex justify-content-center backgroundmenu text-white-50">
+        <p>&copy;<a href="https://www.Test2Impress.be/" class="text-white">Test2Impress</a> - {% now "Y" %}.</p>
     </footer>
 </body>
     <!-- Bootstrap core JavaScript
