--- a/homepage/templates/homepage/menu.html
+++ b/homepage/templates/homepage/menu.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+    {% load static %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,28 +18,65 @@
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.0/examples/product/product.css" rel="stylesheet">
 <style>
-    .backgroundmenu {
+
+/* Menucolors */
+    .bgblue {
         background: #2c3540;
       }
-    .backgroundmain {
+   
+    .bggreen {
         background: #7d8c84;
       }
-    
-    a{
-        color: #111
+   
+    .backgroundbottomleft {
+        background: #2c3540;
+      }
+/* Textcolors */
+    .lightyellow {
+        color:#eff2d8;
+    }
+
+    .yellow {
+        color:#d4d9c1;
+    }
+
+    .green {
+        color:#7d8c84;
+    }
+
+    .blue {
+        color:#2c3540;
+    }
+
+    .darkblue {
+        color:#04050d;
+    }
+/* Elements */
+
+    .afooter {
+        color: #111;
       }
     
-    a:visited {
-        color: #111
+    .afooter:visited {
+        color: #111;
       }
     
-    a:hover {
-        color: #111
+    .afooter:hover {
+        color: #111;
       }
+    
+    .image {
+        width:80%;
+        height:80%;
+        object-fit: contain;
+        padding-top: 5px;
+    }
+
+
 </style>
 </head>
   <body> 
-    <nav class="navbar px-5 navbar-expand-lg backgroundmenu navbar-dark">
+    <nav class="navbar px-5 navbar-expand-lg bgblue navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="navbarlogo" src="{{home.logo.url}}" height=50px><b>Test2Impress</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,38 +94,46 @@
         </div>
     </nav>
     
-    <div class="position-relative overflow-hidden p-0 p-md-5 m-md-3 text-center bg-light">
+    <div class="bggreen position-relative overflow-hidden p-0 p-md-5 m-md-3 text-center">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 font-weight-normal"><b>Test</b>2Impress</h1>
-        <p class="lead font-weight-normal">We <b>test</b> software: from websites to mainframe applications, from integrations to mobile solutions. Software testing is necessary because we all make mistakes and those can be expensive and potentially dangerous, harming you or your company’s reputation.</p>
-        <p class="lead font-weight-normal">This is where we step in.</p>
-        <a class="btn btn-outline-secondary" href="#">Past Projects</a>
+        <h1 class="display-4 font-weight-normal"><span class="lightyellow"><b>Test</b></span></h1>
+        <p class="lead font-weight-normal">We <span class="lightyellow"><b>test</b></span> software: from websites to mainframe applications, from integrations to mobile solutions. Software testing is necessary because we all make mistakes and those can be expensive and potentially dangerous, harming you or your company’s reputation.</p>
+        <p class="lead font-weight-normal">This is where <span class="lightyellow"><b>Test2Impress</b></span> steps in.</p>
+        <a class="darkblue btn btn-outline-secondary" href="#">Past Projects</a>
       </div>
       <div class="product-device box-shadow d-none d-md-block"></div>
       <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
     </div>
 
     <div class="d-md-flex flex-md-equal w-100 my-md-0 pl-md-0">
-      <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+      
+      <div class="bgblue mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden">
         <div class="my-3 py-3">
-          <h2 class="display-5">Test2<b>Impress</b></h2>
-          <p class="lead"><b>Impress</b> your customers with a unique website!</p>
+          <h2 class="display-5"><span class="lightyellow"><b>Impress</b></span></h2>
+          <p class="lead yellow"><span class="lightyellow"><b>Impress</b></span> your customers with a unique website for all devices & browsers!</p>
+          <p class="lead yellow">Click on the example below to see some examples.</p>
         </div>
-      <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"><img src="{% static 'Miniwebsite.jpg' %}"></div>
-    </div>
+        <a href="#">
+            <div class="bg-light box-shadow mx-auto mb-0" style="width: 60%; height: 100%; border-radius: 21px 21px 0 0;"><img class="image" src="{% static 'Miniwebsite.jpg' %}"></div>
+        </a>
+      </div>
     
-    <div class="bg-light mr-md-0 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-        <div class="my-3 p-3">
-          <h2 class="display-5">Another headline</h2>
-          <p class="lead">And an even wittier subheading.</p>
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3">
+          <h2 class="darkblue display-5">Test2<b>I</b>mpress</h2>
+          <p class="lead">Who are we?</p>
+          <br/>
+          <br/>
         </div>
-        <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+        <a href="#">
+        <div class="bg-dark box-shadow mx-auto mb-0" style="width: 60%; height: 100%; border-radius: 21px 21px 0 0;"><img class="image" src="{% static 'WhoAreWe2.jpg' %}"></div>
+        </a>
       </div>
     </div>
      
     <!--Footer -->
-    <footer class="d-flex justify-content-center backgroundmenu text-white-50">
-        <p>&copy;<a href="https://www.Test2Impress.be/" class="text-white">Test2Impress</a> - {% now "Y" %}.</p>
+    <footer class="d-flex justify-content-center bgblue text-white-50">
+        <p>&copy;<a href="https://www.Test2Impress.be/" class="afooter text-white">Test2Impress</a> - {% now "Y" %}.</p>
     </footer>
 </body>
     <!-- Bootstrap core JavaScript
