--- a/homepage/templates/homepage/menu.html
+++ b/homepage/templates/homepage/menu.html
@@ -75,7 +75,8 @@
 
 </style>
 </head>
-  <body> 
+  <body>
+      {% for homes in homes.all %}
     <nav class="navbar px-5 navbar-expand-lg bgblue navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="navbarlogo" src="{{home.logo.url}}" height=50px><b>Test2Impress</b></a>
@@ -93,7 +94,7 @@
             </div>
         </div>
     </nav>
-    
+    {% endfor %}
     <div class="bggreen position-relative overflow-hidden p-0 p-md-5 m-md-3 text-center">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
         <h1 class="display-4 font-weight-normal"><span class="lightyellow"><b>Test</b></span></h1>
@@ -111,7 +112,7 @@
         <div class="my-3 py-3">
           <h2 class="display-5"><span class="lightyellow"><b>Impress</b></span></h2>
           <p class="lead yellow"><span class="lightyellow"><b>Impress</b></span> your customers with a unique website for all devices & browsers!</p>
-          <p class="lead yellow">Click on the example below to see some examples.</p>
+          <p class="lead yellow">Click on the cell phone below to see some examples.</p>
         </div>
         <a href="#">
             <div class="bg-light box-shadow mx-auto mb-0" style="width: 60%; height: 100%; border-radius: 21px 21px 0 0;"><img class="image" src="{% static 'Miniwebsite.jpg' %}"></div>
