--- a/pasttest/templates/pasttest/test.html
+++ b/pasttest/templates/pasttest/test.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
+  <link href="https://rawcdn.githack.com/SochavaAG/example-mycode/master/_common/css/reset.css" type="stylesheet">
     {% load static %}
 <head>
 <style>
+  
 body {
   background-color: #000;
 
@@ -760,7 +762,8 @@ img {
     </section>
   </div>
 </body>
-<script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js">
+  
   (function ($) {
   $(function () {
 
