--- a/homepage/templates/homepage/menu.html
+++ b/homepage/templates/homepage/menu.html
@@ -22,7 +22,7 @@
     <script src="https://kit.fontawesome.com/cba82e9257.js" crossorigin="anonymous"></script>
 <style>
 
-/* Menucolors */
+/* Backgroundcolors */
     
     .bglightyellow {
         background: #eff2d8;
