--- a/pasttest/templates/pasttest/test.html
+++ b/pasttest/templates/pasttest/test.html
@@ -1,46 +1,106 @@
 <!doctype html>
 <html lang="en">
   <link href="https://rawcdn.githack.com/SochavaAG/example-mycode/master/_common/css/reset.css" type="stylesheet">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     {% load static %}
 <head>
 <style>
-  
-body {
-  background-color: #000;
+/*Colors*/
+/* Backgroundcolors */
+    
+.bglightyellow {
+        background: #eff2d8;
+      }
 
+.bgyellow {
+        background: #d4d9c1;
+      }
+   
+    .bggreen {
+        background: #7d8c84;
+      }
+
+    .bgblue {
+        background: #2c3540;
+      }
+    
+    .bgdarkblue {
+        background: #04050d;
+      }
+
+/*Text Colors*/
+.lightyellow {
+        color:#eff2d8;
+    }
+
+    .yellow {
+        color:#d4d9c1;
+    }
+
+    .green {
+        color:#7d8c84;
+    }
+
+    .blue {
+        color:#2c3540;
+    }
+
+    .darkblue {
+        color:#04050d;
+    }
+
+
+body {
+  background-color: #7d8c84;
   overflow-x: hidden;
 }
 
 @font-face {
-  font-family: 'ESL Legend';
+  font-family: "ESL Legend";
   src: url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Light.eot);
-  src: url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Light.eot#iefix) format("embedded-opentype"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Light.woff2) format("woff2"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Light.woff) format("woff"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Light.ttf) format("truetype"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Light.svg#eicon) format("svg");
+  src: url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Light.eot#iefix)
+      format("embedded-opentype"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Light.woff2)
+      format("woff2"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Light.woff)
+      format("woff"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Light.ttf)
+      format("truetype"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Light.svg#eicon)
+      format("svg");
   font-style: normal;
   font-weight: 300;
 }
 @font-face {
-  font-family: 'ESL Legend';
+  font-family: "ESL Legend";
   src: url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Regular.eot);
-  src: url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Regular.eot#iefix) format("embedded-opentype"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Regular.woff2) format("woff2"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Regular.woff) format("woff"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Regular.ttf) format("truetype"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Regular.svg#eicon) format("svg");
+  src: url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Regular.eot#iefix)
+      format("embedded-opentype"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Regular.woff2)
+      format("woff2"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Regular.woff)
+      format("woff"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Regular.ttf)
+      format("truetype"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Regular.svg#eicon)
+      format("svg");
   font-style: normal;
   font-weight: normal;
 }
 @font-face {
-  font-family: 'ESL Legend';
+  font-family: "ESL Legend";
   src: url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Bold.eot);
-  src: url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Bold.eot#iefix) format("embedded-opentype"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Bold.woff2) format("woff2"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Bold.woff) format("woff"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Bold.ttf) format("truetype"),
-  url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Bold.svg#eicon) format("svg");
+  src: url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Bold.eot#iefix)
+      format("embedded-opentype"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Bold.woff2)
+      format("woff2"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Bold.woff)
+      format("woff"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Bold.ttf)
+      format("truetype"),
+    url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/fonts/legend/ESLLegend-Bold.svg#eicon)
+      format("svg");
   font-style: normal;
   font-weight: bold;
 }
@@ -52,7 +112,6 @@ img {
 .ag-format-container {
   width: 1160px;
   margin: 0 auto;
-
   position: relative;
 }
 
@@ -61,30 +120,19 @@ img {
 }
 .ag-timeline_title-box {
   padding: 0 0 30px;
-
   text-align: center;
 }
 .ag-timeline_tagline {
   font-size: 40px;
-  color: rgb(84, 89, 95);
+  color: #eff2d8;
 }
 .ag-timeline_title {
-  background-image: url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/images/bg.jpg);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-
-  background-size: cover;
-  -webkit-background-clip: text;
-  background-clip: text;
-  text-fill-color: transparent;
-  color: transparent;
-
+  color: #04050d;
   font-size: 80px;
 }
 
 .ag-timeline_item {
   margin: 0 0 50px;
-
   position: relative;
 }
 .ag-timeline_item:nth-child(2n) {
@@ -96,20 +144,16 @@ img {
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
-
   position: relative;
 }
 .ag-timeline_line {
   width: 2px;
   background-color: #393935;
-
   position: absolute;
   top: 2px;
   left: 50%;
   bottom: 0;
-
   overflow: hidden;
-
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
@@ -120,7 +164,7 @@ img {
 .ag-timeline_line-progress {
   width: 100%;
   height: 20%;
-  background-color: #FF0;
+  background-color: #d4d9c1;
 }
 
 .ag-timeline-card_box {
@@ -138,15 +182,15 @@ img {
 }
 .ag-timeline-card_point {
   height: 50px;
-  line-height: 50px;
+  line-height: 45px;
   width: 50px;
-  border: 3px solid #FF0;
+  border: 3px solid #d4d9c1;
   background-color: #1d1d1b;
 
   text-align: center;
-  font-family: 'ESL Legend', sans-serif;
+  font-family: "ESL Legend", sans-serif;
   font-size: 20px;
-  color: #FFF;
+  color: #fff;
 
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -154,18 +198,18 @@ img {
 }
 .js-ag-active .ag-timeline-card_point {
   color: #1d1d1b;
-  background-color: #FF0;
+  background-color: #d4d9c1;
 }
 .ag-timeline-card_meta-box {
   display: inline-block;
 }
 .ag-timeline-card_meta {
-  margin: 10px 0 0;
+  margin: 0px 0 0;
 
-  font-family: 'ESL Legend', sans-serif;
+  font-family: "ESL Legend", sans-serif;
   font-weight: bold;
   font-size: 28px;
-  color: #FF0;
+  color: #d4d9c1;
 }
 .ag-timeline-card_item {
   display: inline-block;
@@ -179,19 +223,19 @@ img {
   -moz-border-radius: 6px;
   border-radius: 6px;
 
-  -webkit-box-shadow: 0 0 0 0 rgba(0,0,0,.5);
-  -moz-box-shadow: 0 0 0 0 rgba(0,0,0,.5);
-  -o-box-shadow: 0 0 0 0 rgba(0,0,0,.5);
-  box-shadow: 0 0 0 0 rgba(0,0,0,.5);
+  -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
+  -o-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
 
-  -webkit-transition: -webkit-transform .5s, opacity .5s;
-  -moz-transition: -moz-transform .5s, opacity .5s;
-  -o-transition: -o-transform .5s, opacity .5s;
-  transition: transform .5s, opacity .5s;
+  -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
+  -moz-transition: -moz-transform 0.5s, opacity 0.5s;
+  -o-transition: -o-transform 0.5s, opacity 0.5s;
+  transition: transform 0.5s, opacity 0.5s;
 
   position: relative;
 }
-.ag-timeline_item:nth-child(2n+1) .ag-timeline-card_item {
+.ag-timeline_item:nth-child(2n + 1) .ag-timeline-card_item {
   -webkit-transform: translateX(-200%);
   -moz-transform: translateX(-200%);
   -ms-transform: translateX(-200%);
@@ -199,13 +243,34 @@ img {
   transform: translateX(-200%);
 }
 .ag-timeline_item:nth-child(2n) .ag-timeline-card_item {
-  -webkit-transform: translateX(200%);
-  -moz-transform: translateX(200%);
-  -ms-transform: translateX(200%);
-  -o-transform: translateX(200%);
-  transform: translateX(200%);
+  -webkit-transform: translateX(100%);
+  -moz-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  -o-transform: translateX(100%);
+  transform: translateX(100%);
 }
-.js-ag-active.ag-timeline_item:nth-child(2n+1) .ag-timeline-card_item,
+.ag-timeline_item:nth-child(2n + 1) .ag-timeline-card_point .ag-timeline-card_point-box {
+  -webkit-transform: translateX(100%);
+  -moz-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  -o-transform: translateX(100%);
+  transform: translateX(100%);
+}
+.ag-timeline_item:nth-child(2n) .ag-timeline-card_point-box .ag-timeline-card_point {
+  -webkit-transform: translateX(635%);
+  -moz-transform: translateX(635%);
+  -ms-transform: translateX(635%);
+  -o-transform: translateX(635%);
+  transform: translateX(635%);
+}
+.ag-timeline_item:nth-child(2n) .ag-timeline-card_meta-box .ag-timeline-card_meta {
+  -webkit-transform: translateX(-20%);
+  -moz-transform: translateX(-20%);
+  -ms-transform: translateX(-20%);
+  -o-transform: translateX(-20%);
+  transform: translateX(-20%);
+}
+.js-ag-active.ag-timeline_item:nth-child(2n + 1) .ag-timeline-card_item,
 .js-ag-active.ag-timeline_item:nth-child(2n) .ag-timeline-card_item {
   opacity: 1;
 
@@ -232,13 +297,12 @@ img {
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-.ag-timeline_item:nth-child(2n+1) .ag-timeline-card_arrow {
+.ag-timeline_item:nth-child(2n + 1) .ag-timeline-card_arrow {
   margin-left: calc(-18px / 2);
   margin-right: calc(-18px / 2);
 }
 .ag-timeline_item:nth-child(2n) .ag-timeline-card_arrow {
   margin-left: -10px;
-
   right: auto;
   left: 0;
 }
@@ -251,19 +315,16 @@ img {
 .ag-timeline-card_title {
   display: none;
   margin: 10px 0 0;
-
-  font-family: 'ESL Legend', sans-serif;
+  font-family: "ESL Legend", sans-serif;
   font-weight: bold;
   font-size: 28px;
-  color: #FF0;
+  color: #d4d9c1;
 }
 .ag-timeline-card_desc {
   line-height: 1.45;
-
   font-size: 16px;
-  color: #FFF;
+  color: #fff;
 }
-
 
 @media only screen and (max-width: 979px) {
   .ag-timeline_line {
@@ -283,7 +344,8 @@ img {
   }
   .ag-timeline-card_point-box,
   .ag-timeline_item:nth-child(2n) .ag-timeline-card_point-box {
-    margin: 0 0 0 8px;
+    margin: 0 0 0 4px;
+
   }
   .ag-timeline-card_point {
     height: 40px;
@@ -292,9 +354,9 @@ img {
   }
   .ag-timeline-card_item {
     width: auto;
-    margin: -65px 0 0 75px
+    margin: -65px 0 0 75px;
   }
-  .ag-timeline_item:nth-child(2n+1) .ag-timeline-card_item,
+  .ag-timeline_item:nth-child(2n + 1) .ag-timeline-card_item,
   .ag-timeline_item:nth-child(2n) .ag-timeline-card_item {
     -webkit-transform: translateX(200%);
     -moz-transform: translateX(200%);
@@ -302,7 +364,7 @@ img {
     -o-transform: translateX(200%);
     transform: translateX(200%);
   }
-  .ag-timeline_item:nth-child(2n+1) .ag-timeline-card_arrow {
+  .ag-timeline_item:nth-child(2n + 1) .ag-timeline-card_arrow {
     right: auto;
     left: 0;
   }
@@ -335,35 +397,53 @@ img {
   }
   .ag-timeline-card_desc {
     font-size: 14px;
+    word-wrap:normal;
+    line-break:auto;
   }
 }
 
 @media only screen and (max-width: 479px) {
-
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
   .ag-format-container {
     width: 750px;
   }
-
 }
 
 @media (min-width: 980px) and (max-width: 1161px) {
   .ag-format-container {
     width: 960px;
   }
-
 }
 </style>
 </head>
 
 <body>
+  <nav class="navbar px-5 navbar-expand-lg bgdarkblue navbar-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'menu' %}"><img class="navbarlogo px-3" src="{% static 'Webistebg.gif'%}" height=40px><b>Test2Impress</b></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link px-2" aria-current="page" href="{% url 'home' %}">Start</a>
+                <a class="nav-link active px-2" href="#">Overview</a>
+                <a class="nav-link px-2" href="{% url 'test'%}">Testing</a>
+                <a class="nav-link px-2" href="#">Webdevelopment</a>
+                <a class="nav-link px-2" href="#">About</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
   <div class="ag-timeline-block">
     <div class="ag-timeline_title-box">
-      <div class="ag-timeline_tagline">Timeline</div>
-      <div class="ag-timeline_title">No Flex</div>
+        <div class="ag-timeline_title">Testing</div>
+        <div class="ag-timeline_tagline">Past Projects</div>
     </div>
+
     <section class="ag-section">
       <div class="ag-format-container">
         <div class="js-timeline ag-timeline">
@@ -371,45 +451,38 @@ img {
             <div class="js-timeline_line-progress ag-timeline_line-progress"></div>
           </div>
           <div class="ag-timeline_list">
+            {% for project in projects.all %}
             <div class="js-timeline_item ag-timeline_item">
               <div class="ag-timeline-card_box">
                 <div class="js-timeline-card_point-box ag-timeline-card_point-box">
                   <div class="ag-timeline-card_point">2021</div>
                 </div>
                 <div class="ag-timeline-card_meta-box">
-                  <div class="ag-timeline-card_meta">Season 13</div>
+                  <div class="ag-timeline-card_meta">{{project.testtitle}}</div>
                 </div>
               </div>
               <div class="ag-timeline-card_item">
                 <div class="ag-timeline-card_inner">
                   <div class="ag-timeline-card_img-box">
-                    <img src="https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/images/img-13.png" class="ag-timeline-card_img" width="640" height="360" />
+                    <img src="{{ project.testimg.url }}" class="ag-timeline-card_img" width="640" height="360" />
                   </div>
                   <div class="ag-timeline-card_info">
-                    <div class="ag-timeline-card_title">Season 13</div>
+                    <div class="ag-timeline-card_title">{{project.testtitle}}</div>
                     <div class="ag-timeline-card_desc">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                      eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-                      montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-                      pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla
-                      vel, aliquet nec, vulputate eget, arcu.
+                      {{project.testbody | linebreaks}}
                     </div>
                   </div>
                 </div>
                 <div class="ag-timeline-card_arrow"></div>
               </div>
             </div>
-  
-
-
- <!--end of cards-->           
+            {% endfor %}
           </div>
-        </div>
+        </div>  
       </div>
     </section>
   </div>
 </body>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>  
   (function ($) {
@@ -484,3 +557,4 @@ img {
   });
 })(jQuery);
 </script>
+</html>
