--- a/homepage/templates/homepage/menu.html
+++ b/homepage/templates/homepage/menu.html
@@ -145,7 +145,7 @@
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link px-2" aria-current="page" href="{% url 'home' %}">Start</a>
                     <a class="nav-link active px-2" href="#">Overview</a>
-                    <a class="nav-link px-2" href="{% url 'test'%}">Testing</a>
+                    <a class="nav-link px-2" href="{% url 'test'%}#bottom">Testing</a>
                     <a class="nav-link px-2" href="#">Webdevelopment</a>
                     <a class="nav-link px-2" href="#">About</a>
                 </div>
