--- a/pasttest/templates/pasttest/test.html
+++ b/pasttest/templates/pasttest/test.html
@@ -116,7 +116,7 @@ img {
 }
 
 .ag-timeline-block {
-  padding: 300px 0;
+  padding: 30px 0;
 }
 .ag-timeline_title-box {
   padding: 0 0 30px;
@@ -174,9 +174,20 @@ img {
   padding: 0 50% 20px 0;
 }
 .ag-timeline-card_point-box {
-  display: inline-block;
-  margin: 0 14px 0 -28px;
+  display: inline-flex;
+  margin: 0 0px 0 -25px;
 }
+
+.ag-timeline_item:nth-child(2) .ag-timeline-card_point {
+  display: inline-block;
+  text-align: center;
+  position: absolute;
+  top: 2px;
+  left: 29%;
+  bottom: 0;
+  overflow: hidden;
+}
+
 .ag-timeline_item:nth-child(2n) .ag-timeline-card_point-box {
   margin: 0 -28px 0 14px;
 }
@@ -216,6 +227,10 @@ img {
   width: 45%;
   margin: -77px 0 0;
   background-color: #282828;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #000000;
+ 
 
   opacity: 0;
 
@@ -223,10 +238,10 @@ img {
   -moz-border-radius: 6px;
   border-radius: 6px;
 
-  -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
-  -o-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 20px 20px 15px #2c3540;
+  -moz-box-shadow: 20px 20px 15px #2c3540;
+  -o-box-shadow: 20px 20px 15px #2c3540;
+  box-shadow: 20px 20px 15px #2c3540;
 
   -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
   -moz-transition: -moz-transform 0.5s, opacity 0.5s;
@@ -248,6 +263,7 @@ img {
   -ms-transform: translateX(100%);
   -o-transform: translateX(100%);
   transform: translateX(100%);
+  text-align: left;
 }
 .ag-timeline_item:nth-child(2n + 1) .ag-timeline-card_point .ag-timeline-card_point-box {
   -webkit-transform: translateX(100%);
@@ -257,18 +273,18 @@ img {
   transform: translateX(100%);
 }
 .ag-timeline_item:nth-child(2n) .ag-timeline-card_point-box .ag-timeline-card_point {
-  -webkit-transform: translateX(635%);
-  -moz-transform: translateX(635%);
-  -ms-transform: translateX(635%);
-  -o-transform: translateX(635%);
-  transform: translateX(635%);
+  -webkit-transform: translateX(435%);
+  -moz-transform: translateX(435%);
+  -ms-transform: translateX(435%);
+  -o-transform: translateX(435%);
+  transform: translateX(435%);
 }
 .ag-timeline_item:nth-child(2n) .ag-timeline-card_meta-box .ag-timeline-card_meta {
-  -webkit-transform: translateX(-20%);
-  -moz-transform: translateX(-20%);
-  -ms-transform: translateX(-20%);
-  -o-transform: translateX(-20%);
-  transform: translateX(-20%);
+  -webkit-transform: translateX(-30%);
+  -moz-transform: translateX(-30%);
+  -ms-transform: translateX(-30%);
+  -o-transform: translateX(-30%);
+  transform: translateX(-30%);
 }
 .js-ag-active.ag-timeline_item:nth-child(2n + 1) .ag-timeline-card_item,
 .js-ag-active.ag-timeline_item:nth-child(2n) .ag-timeline-card_item {
@@ -313,7 +329,7 @@ img {
   padding: 20px 30px;
 }
 .ag-timeline-card_title {
-  display: none;
+  display:inline-block;
   margin: 10px 0 0;
   font-family: "ESL Legend", sans-serif;
   font-weight: bold;
@@ -416,6 +432,52 @@ img {
     width: 960px;
   }
 }
+
+.button {
+      color:#04050d;
+      background-color:#eff2d8;
+      border-color:#2c3540;
+      box-shadow: 2px 5px 5px #2c3540;
+    }
+
+    .button:hover {
+      color:#04050d;
+      background-color:#d4d9c1 ;
+      border-color:#2c3540;
+      box-shadow: 5px 15px 20px #2c3540;
+    }
+
+    .button:active {
+      color:#eff2d8;
+      background-color:#2c3540 ;
+      border-color:#2c3540;
+      box-shadow: 5px 15px 20px #eff2d8;
+      filter: saturate(150%);
+      transform: translateY(3px);
+    }
+
+    .button:focus {
+      color:#04050d;
+      background-color:#d4d9c1 ;
+      border-color:#7d8c84;
+      box-shadow: 5px 15px 20px #2c3540;
+    }
+  
+.taglinebottomtitle {
+  position:absolute;
+  bottom: 100%;
+  left:-10%;
+  font-size: 50px;
+  color:#d4d9c1;
+}
+.taglinebottomtext {
+  position:absolute;
+  left:-10%;
+  bottom: 20%;
+  font-size: 20px;
+  color:#04050d;
+}
+
 </style>
 </head>
 
@@ -429,8 +491,8 @@ img {
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
                 <a class="nav-link px-2" aria-current="page" href="{% url 'home' %}">Start</a>
-                <a class="nav-link active px-2" href="#">Overview</a>
-                <a class="nav-link px-2" href="{% url 'test'%}">Testing</a>
+                <a class="nav-link px-2" href="{% url 'menu' %}">Overview</a>
+                <a class="nav-link active px-2" href="{% url 'test'%}#bottom">Testing</a>
                 <a class="nav-link px-2" href="#">Webdevelopment</a>
                 <a class="nav-link px-2" href="#">About</a>
             </div>
@@ -439,9 +501,6 @@ img {
 </nav>
 
   <div class="ag-timeline-block">
-    <div class="ag-timeline_title-box">
-        <div class="ag-timeline_title">Testing</div>
-        <div class="ag-timeline_tagline">Past Projects</div>
     </div>
 
     <section class="ag-section">
@@ -451,20 +510,48 @@ img {
             <div class="js-timeline_line-progress ag-timeline_line-progress"></div>
           </div>
           <div class="ag-timeline_list">
-            {% for project in projects.all %}
             <div class="js-timeline_item ag-timeline_item">
               <div class="ag-timeline-card_box">
                 <div class="js-timeline-card_point-box ag-timeline-card_point-box">
-                  <div class="ag-timeline-card_point">2021</div>
+                  <div class="ag-timeline-card_point">...</div>
                 </div>
                 <div class="ag-timeline-card_meta-box">
-                  <div class="ag-timeline-card_meta">{{project.testtitle}}</div>
+                  <div class="ag-timeline-card_meta"> The future</div>
                 </div>
               </div>
               <div class="ag-timeline-card_item">
                 <div class="ag-timeline-card_inner">
                   <div class="ag-timeline-card_img-box">
-                    <img src="{{ project.testimg.url }}" class="ag-timeline-card_img" width="640" height="360" />
+                    <img src="{% static 'i-yourproject.jpg'%}" class="ag-timeline-card_img" width="640" height="360">
+                  </div>
+                  <div class="ag-timeline-card_info">
+                    <div class="ag-timeline-card_title">If you are looking for:</div>
+                    <div class="ag-timeline-card_desc">
+                      <Span>- A big team player, aiming to bring up the best in every person on the team and by that maximizing the efficiency.
+<br/>- An ISTQB certified tester all about finding the best solutions by custom-tailoring tools, approaches and methods to your project.
+<br/>- A professional with years of experience, able to apply a massive skill set and a thorough knowledge of test management and test automation.
+<br/> - Someone who can take part in projects of all sizes, be it as a tester, test coordinator or test manager: there is no challenge we can’t handle!<br/><br/></Span>
+                      <a class="btn button" href="#">Contact us</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="ag-timeline-card_arrow"></div>
+              </div>
+            </div>
+          {% for project in projects.all %}
+            <div class="js-timeline_item ag-timeline_item">
+              <div class="ag-timeline-card_box">
+                <div class="js-timeline-card_point-box ag-timeline-card_point-box">
+                  <div class="ag-timeline-card_point">{{project.yearstart}}</div>
+                </div>
+                <div class="ag-timeline-card_meta-box">
+                  <div class="ag-timeline-card_meta">{{project.startddmmyy}} - {% if project.is_past_now %}...{% else %}{{project.endddmmyy}}{% endif%}</div>
+                </div>
+              </div>
+              <div class="ag-timeline-card_item">
+                <div class="ag-timeline-card_inner">
+                  <div class="ag-timeline-card_img-box">
+                    <img src="{{ project.testimg.url }}" class="ag-timeline-card_img" width="640" height="360">
                   </div>
                   <div class="ag-timeline-card_info">
                     <div class="ag-timeline-card_title">{{project.testtitle}}</div>
@@ -477,11 +564,19 @@ img {
               </div>
             </div>
             {% endfor %}
+            <div class="js-timeline_item ag-timeline_item">
+              <div class="ag-timeline-card_box">
+                <div class="js-timeline-card_point-box ag-timeline-card_point-box">
+                  <div class="ag-timeline-card_point">2009</div>
+                </div>
+          <div class="taglinebottomtitle"> <b>Career in Testing</b></div>
+          <div class="taglinebottomtext"> After teaching maths & IT for about 5 years it was time something else:<br/>Scroll up to follow my career path...</div>
           </div>
         </div>  
       </div>
     </section>
   </div>
+  <a name="bottom"></a>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>  
