--- a/pasttest/templates/pasttest/test.html
+++ b/pasttest/templates/pasttest/test.html
@@ -477,7 +477,11 @@ img {
   font-size: 20px;
   color:#04050d;
 }
-
+.button-totop {
+  position:static;
+  right: 10%;
+  bottom: 10%;
+}
 </style>
 </head>
 
@@ -571,12 +575,13 @@ img {
                 </div>
           <div class="taglinebottomtitle"> <b>Career in Testing</b></div>
           <div class="taglinebottomtext"> After teaching maths & IT for about 5 years it was time something else:<br/>Scroll up to follow my career path...</div>
-          </div>
+        </div>
         </div>  
       </div>
     </section>
+    <a class="btn button btn-totop" href="#">Contact us</a>
   </div>
-  <a name="bottom"></a>
+  <a name="bottom"></a>  
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>  
