--- a/pasttest/templates/pasttest/test.html
+++ b/pasttest/templates/pasttest/test.html
@@ -3,7 +3,10 @@
   <link href="https://rawcdn.githack.com/SochavaAG/example-mycode/master/_common/css/reset.css" type="stylesheet">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    {% load static %}
+  <!-- FontAwesome Kit -->
+  <script src="https://kit.fontawesome.com/cba82e9257.js" crossorigin="anonymous"></script>
+  
+  {% load static %}
 <head>
 <style>
 /*Colors*/
@@ -50,7 +53,7 @@
         color:#04050d;
     }
 
-
+/*Start of imported CSS*/
 body {
   background-color: #7d8c84;
   overflow-x: hidden;
@@ -279,6 +282,15 @@ img {
   -o-transform: translateX(435%);
   transform: translateX(435%);
 }
+
+.ag-timeline_item:nth-child(6) .ag-timeline-card_point-box .ag-timeline-card_point {
+  -webkit-transform: translateX(446%);
+  -moz-transform: translateX(446%);
+  -ms-transform: translateX(446%);
+  -o-transform: translateX(446%);
+  transform: translateX(446%);
+}
+
 .ag-timeline_item:nth-child(2n) .ag-timeline-card_meta-box .ag-timeline-card_meta {
   -webkit-transform: translateX(-30%);
   -moz-transform: translateX(-30%);
@@ -286,6 +298,15 @@ img {
   -o-transform: translateX(-30%);
   transform: translateX(-30%);
 }
+
+.ag-timeline_item:nth-child(2n+1) .ag-timeline-card_meta-box .ag-timeline-card_meta {
+  -webkit-transform: translateX(10%);
+  -moz-transform: translateX(10%);
+  -ms-transform: translateX(10%);
+  -o-transform: translateX(10%);
+  transform: translateX(10%);
+}
+
 .js-ag-active.ag-timeline_item:nth-child(2n + 1) .ag-timeline-card_item,
 .js-ag-active.ag-timeline_item:nth-child(2n) .ag-timeline-card_item {
   opacity: 1;
@@ -432,8 +453,11 @@ img {
     width: 960px;
   }
 }
+/*End of imported CSS*/
 
-.button {
+/*Elements*/
+
+  .button {
       color:#04050d;
       background-color:#eff2d8;
       border-color:#2c3540;
@@ -465,8 +489,8 @@ img {
   
 .taglinebottomtitle {
   position:absolute;
-  bottom: 100%;
-  left:-10%;
+  bottom: 20%;
+  left:10%;
   font-size: 50px;
   color:#d4d9c1;
 }
@@ -478,15 +502,40 @@ img {
   color:#04050d;
 }
 .button-totop {
-  position:static;
-  right: 10%;
-  bottom: 10%;
+  position:fixed;
+  bottom: 100px;
+  right: 30px;
+  z-index: 1000;
+  font-size: 150px;
+  color:#d4d9c1
 }
+
+.button-totop::after {
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+.button-totop:hover {
+  cursor: pointer;
+  color: #2c3540;
+}
+.button-totop:active {
+  color: #04050d;
+}
+.button-.button-totop {
+  opacity: 1;
+  visibility: visible;
+}
+
+.navbarshadow {
+      box-shadow: 0px 10px 10px #000000a2;
+    }
 </style>
 </head>
 
 <body>
-  <nav class="navbar px-5 navbar-expand-lg bgdarkblue navbar-dark">
+  <a name="top"></a>
+  <nav class="navbar navbarshadow px-5 navbar-expand-lg bgdarkblue navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'menu' %}"><img class="navbarlogo px-3" src="{% static 'Webistebg.gif'%}" height=40px><b>Test2Impress</b></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -497,7 +546,7 @@ img {
                 <a class="nav-link px-2" aria-current="page" href="{% url 'home' %}">Start</a>
                 <a class="nav-link px-2" href="{% url 'menu' %}">Overview</a>
                 <a class="nav-link active px-2" href="{% url 'test'%}#bottom">Testing</a>
-                <a class="nav-link px-2" href="#">Webdevelopment</a>
+                <a class="nav-link px-2" href="{% url 'web' %}">Websites</a>
                 <a class="nav-link px-2" href="#">About</a>
             </div>
         </div>
@@ -573,15 +622,18 @@ img {
                 <div class="js-timeline-card_point-box ag-timeline-card_point-box">
                   <div class="ag-timeline-card_point">2009</div>
                 </div>
-          <div class="taglinebottomtitle"> <b>Career in Testing</b></div>
-          <div class="taglinebottomtext"> After teaching maths & IT for about 5 years it was time something else:<br/>Scroll up to follow my career path...</div>
-        </div>
+          <div class="taglinebottomtitle"> <b>Past projects...</b></div>
+          </div>
         </div>  
-      </div>
+      </div>     
     </section>
-    <a class="btn button btn-totop" href="#">Contact us</a>
   </div>
-  <a name="bottom"></a>  
+  <a name="bottom"></a>
+  <!--Footer -->
+  <a href="{% url 'test' %}#top"><i id="buttontotop"class="button-totop fas fa-angle-double-up"></i></a>
+  <footer class="d-flex justify-content-center bgdarkblue text-white-50">
+    <p>&copy;<a href="https://www.Test2Impress.be/" class="afooter text-white">Test2Impress</a> - {% now "Y" %}.</p>
+</footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>  
@@ -656,5 +708,22 @@ img {
 
   });
 })(jQuery);
+</script>
+<script>
+  var btn = $('.button-totop');
+
+$(window).scroll(function() {
+  if ($(window).scrollTop() > 300) {
+    btn.addClass('show');
+  } else {
+    btn.removeClass('show');
+  }
+});
+
+btn.on('click', function(e) {
+  e.preventDefault();
+  $('html, body').animate({scrollTop:0}, '300');
+});
+
 </script>
 </html>
