--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="description" content="Test2Impress - Our Logo">
+    <meta name="author" content="Test2Impress">
     <meta name="generator" content="Hugo 0.88.1">
     <title>Test2Impress</title>
 
