--- a/homepage/templates/homepage/menu.html
+++ b/homepage/templates/homepage/menu.html
@@ -153,12 +153,12 @@
                     <a class="nav-link active px-2" href="#">Overview</a>
                     <a class="nav-link px-2" href="{% url 'test'%}#bottom">Testing</a>
                     <a class="nav-link px-2" href="{% url 'web'%}">Websites</a>
-                    <a class="nav-link px-2" href="#">About</a>
+                    <a class="nav-link px-2" href="{% url 'who'%}">About</a>
                 </div>
             </div>
         </div>
     </nav>
-    <div class="bggreen topshadow position-relative overflow-hidden p-0 p-md-5 m-md-3 text-center">
+    <div class="bggreen topshadow position-relative overflow-hidden p-0 p-md-1 m-md-3 text-center">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
         <h1 class="display-4 font-weight-normal"><span class="lightyellow"><b>Test</b></span><span class="text-black-50">2Impress</span></h1>
         <p class="lead font-weight-normal">We <span class="lightyellow"><b>test</b></span> software: from websites to mainframe applications, from integrations to mobile solutions. Software testing is necessary because we all make mistakes and those mistakes can be expensive and potentially dangerous, harming you or your company’s reputation.</p>
