--- a/pasttest/templates/pasttest/test.html
+++ b/pasttest/templates/pasttest/test.html
@@ -1,5 +1,11 @@
 <!doctype html>
 <html lang="en">
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Test2Impress">
+    <title>Test2Impress - Testing</title>
+
   <link href="https://rawcdn.githack.com/SochavaAG/example-mycode/master/_common/css/reset.css" type="stylesheet">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -547,11 +553,19 @@ img {
                 <a class="nav-link px-2" href="{% url 'menu' %}">Overview</a>
                 <a class="nav-link active px-2" href="{% url 'test'%}#bottom">Testing</a>
                 <a class="nav-link px-2" href="{% url 'web' %}">Websites</a>
-                <a class="nav-link px-2" href="#">About</a>
+                <a class="nav-link px-2" href="{% url 'who'%}">About</a>
             </div>
         </div>
     </div>
 </nav>
+<section class="py-1 text-center bgblue">
+  <div class="row py-lg-5">
+    <div class="col-lg-6 col-md-8 mx-auto">
+      <h1 class="fw-light lightyellow">Our past testing projects</h1>
+      <p class="lead yellow">In case you haven't noticed: testing software is our thing. Hire us as your testing specialist today!</p>
+    </div>
+  </div>
+</section>
 
   <div class="ag-timeline-block">
     </div>
