--- a/who/templates/who/who.html
+++ b/who/templates/who/who.html
@@ -157,8 +157,8 @@
                     <a class="nav-link px-2" aria-current="page" href="{% url 'home' %}">Start</a>
                     <a class="nav-link px-2" href="{% url 'menu' %}">Overview</a>
                     <a class="nav-link px-2" href="{% url 'test'%}#bottom">Testing</a>
-                    <a class="nav-link active px-2" href="{% url 'web'%}">Websites</a>
-                    <a class="nav-link px-2" href="{% url 'who'%}">About</a>
+                    <a class="nav-link px-2" href="{% url 'web'%}">Websites</a>
+                    <a class="nav-link active px-2" href="{% url 'who'%}">About</a>
                 </div>
             </div>
         </div>
@@ -180,24 +180,10 @@
     <div class="container">
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
+        {% for who in whos.all %}
         <div class="col">
           <div class="card cardborder h-100">
-            <a href="mailto:info@test2impress.be?subject=I would like a quotation for my website&body=Please describe the website you have in mind e.g. I want 3 pages (Landing page, Products, About) with products that I can add and update easily. Do you need a domain (e.g. yourwebsite.com)? If you rather have a (video)call with us to discuss the possibilities please let us know in this mail & we will set it up as soon as possible." target="_blank" style="cursor: pointer;"><img class="img-fluid cardimgyourweb" width="100%" src="{% static 'Miniwebsite.jpg'%}"></img></a>
-            <h2 class="card-title p-2 darkblue"> Your website here?</h2>
-            <div class="card-body d-flex flex-column">
-              <p class="card-text">Contact us!</p>
-              <div class="d-flex justify-content-between align-items-center">
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-          {% for web in webs.all %}
-        <div class="col">
-          <div class="card cardborder h-100">
-            <a href="{{ web.weburl }}" target="_blank" style="cursor: pointer;"><img class="img-fluid cardimg" width="100%" src="{{ web.webimg.url }}"></img></a>
+            <a href="#" target="_blank" style="cursor: pointer;"><img class="img-fluid cardimg" width="100%" src="{{ who.whoimg.url }}"></img></a>
             <h2 class="card-title p-2 darkblue"> {{web.webtitle}}</h2>
             <div class="card-body d-flex flex-column">
               <p class="card-text">{{ web.webbody }}</p>
@@ -206,7 +192,7 @@
               </div>
             </div>
           </div>
-            {% endfor %}
+        {% endfor %}
 </main>
 
 <!--Footer -->
