--- a/pasttest/templates/pasttest/test.html
+++ b/pasttest/templates/pasttest/test.html
@@ -561,8 +561,8 @@ img {
 <section class="py-1 text-center bgblue">
   <div class="row py-lg-5">
     <div class="col-lg-6 col-md-8 mx-auto">
-      <h1 class="fw-light lightyellow">Our past testing projects</h1>
-      <p class="lead yellow">In case you haven't noticed: testing software is our thing. Hire us as your testing specialist today!</p>
+      <h1 class="fw-light lightyellow">Want to hire us for your next project?</h1>
+      <p class="lead yellow">Get in touch!</p>
     </div>
   </div>
 </section>
