--- a/who/templates/who/who.html
+++ b/who/templates/who/who.html
@@ -49,6 +49,10 @@
     .bgdarkblue {
         background: #04050d;
       }
+    
+    .bgblack {
+        background: black;
+    }
 
 /* Textcolors */
     .lightyellow {
@@ -120,7 +124,7 @@
     .cardborder {
       border-style: solid;
       border-width: 3px;
-      border-color: #000000;
+      border-color: #d4d9c1;
       box-shadow: 20px 20px 15px #2c3540;
     }
 
@@ -137,7 +141,7 @@
 
     .cardimg {
       height: 45vh;
-      object-fit:fill;
+      object-fit:contain;
       max-width: auto;
       max-height: 100%;
     }
@@ -167,26 +171,26 @@
 
 <main>
 
-  <section class="py-1 text-center container">
+  <section class="py-1 text-center bgblue">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light lightyellow">Our creations</h1>
-        <p class="lead yellow">Have a look below at our previous created websites. All sites come with a very easy way to upgrade & update.</p>
+        <h1 class="fw-light lightyellow">Test2Impress</h1>
+        <p class="lead yellow">Who are we?</p>
       </div>
     </div>
   </section>
 
-  <div class="album py-5 bggreen">
+  <div class="album py-5 bg-light">
     <div class="container">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="row row-cols-1 g-3">
         {% for who in whos.all %}
         <div class="col">
-          <div class="card cardborder h-100">
-            <a href="#" target="_blank" style="cursor: pointer;"><img class="img-fluid cardimg" width="100%" src="{{ who.whoimg.url }}"></img></a>
-            <h2 class="card-title p-2 darkblue"> {{web.webtitle}}</h2>
-            <div class="card-body d-flex flex-column">
-              <p class="card-text">{{ web.webbody }}</p>
+          <div class="card bggreen cardborder h-100">
+            <h2 class="card-title text-center p-1 lightyellow my-0"> {{who.whofirstname}} {{who.wholastname}}</h2>
+            <a class="text-center" href="#" target="_blank" style="cursor: pointer;"><img class="img-fluid cardimg my-0" src="{{ who.whoimage.url }}"></img></a>
+            <div class="card-body text-left d-flex flex-column lightyellow">
+              <p class="card-text">{{ who.whobody | linebreaks }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 </div>
               </div>
