--- a/pasttest/templates/pasttest/test.html
+++ b/pasttest/templates/pasttest/test.html
@@ -114,6 +114,18 @@ body {
   font-weight: bold;
 }
 
+.afooter {
+        color: #111;
+      }
+    
+    .afooter:visited {
+        color: #111;
+      }
+    
+    .afooter:hover {
+        color: #111;
+      }
+
 img {
   max-width: 100%;
 }
@@ -553,7 +565,7 @@ img {
                 <a class="nav-link px-2" href="{% url 'menu' %}">Overview</a>
                 <a class="nav-link active px-2" href="{% url 'test'%}#bottom">Testing</a>
                 <a class="nav-link px-2" href="{% url 'web' %}">Websites</a>
-                <a class="nav-link px-2" href="{% url 'who'%}">About</a>
+                <a class="nav-link px-2" href="{% url 'who'%}">Contact</a>
             </div>
         </div>
     </div>
