--- a/pastweb/templates/pastweb/web.html
+++ b/pastweb/templates/pastweb/web.html
@@ -141,6 +141,18 @@
       max-width: auto;
       max-height: 100%;
     }
+
+    .afooter {
+        color: #111;
+      }
+    
+    .afooter:visited {
+        color: #111;
+      }
+    
+    .afooter:hover {
+        color: #111;
+      }
     </style>
   </head>
   <body class="bgblue">
@@ -158,7 +170,7 @@
                     <a class="nav-link px-2" href="{% url 'menu' %}">Overview</a>
                     <a class="nav-link px-2" href="{% url 'test'%}#bottom">Testing</a>
                     <a class="nav-link active px-2" href="{% url 'web'%}">Websites</a>
-                    <a class="nav-link px-2" href="{% url 'who'%}">About</a>
+                    <a class="nav-link px-2" href="{% url 'who'%}">Contact</a>
                 </div>
             </div>
         </div>
