--- a/who/templates/who/who.html
+++ b/who/templates/who/who.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Test2Impress">
-    <title>Test2Impress - Websites</title>
+    <title>Test2Impress - About</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
 
@@ -15,6 +15,9 @@
 
     <!-- Bootstrap core CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+<!-- FontAwesome Kit -->
+<script src="https://kit.fontawesome.com/cba82e9257.js" crossorigin="anonymous"></script>
 
     <!-- Favicons -->
 <link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
@@ -126,6 +129,7 @@
       border-width: 3px;
       border-color: #d4d9c1;
       box-shadow: 20px 20px 15px #2c3540;
+      float:right;
     }
 
     .navbarshadow {
@@ -140,14 +144,32 @@
     }
 
     .cardimg {
-      height: 45vh;
+      height: 15vh;
       object-fit:contain;
       max-width: auto;
       max-height: 100%;
+      float:left;
+      padding-right: 15px;
+    }
+
+    .afooter {
+        color: #111;
+      }
+    
+    .afooter:visited {
+        color: #111;
+      }
+    
+    .afooter:hover {
+        color: #111;
+      }
+    
+    .logoinpage {
+      padding:3rem;
     }
     </style>
   </head>
-  <body class="bgblue">
+  <body class="bggreen">
     
 <header>
     <nav class="navbar navbarshadow px-5 navbar-expand-lg bgdarkblue navbar-dark">
@@ -162,7 +184,7 @@
                     <a class="nav-link px-2" href="{% url 'menu' %}">Overview</a>
                     <a class="nav-link px-2" href="{% url 'test'%}#bottom">Testing</a>
                     <a class="nav-link px-2" href="{% url 'web'%}">Websites</a>
-                    <a class="nav-link active px-2" href="{% url 'who'%}">About</a>
+                    <a class="nav-link active px-2" href="{% url 'who'%}">Contact</a>
                 </div>
             </div>
         </div>
@@ -170,40 +192,51 @@
 </header>
 
 <main>
-
-  <section class="py-1 text-center bgblue">
-    <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light lightyellow">Test2Impress</h1>
-        <p class="lead yellow">Who are we?</p>
+  {% for who in whos.all %}
+  <main>
+    <div class="container py-4">
+ 
+      <div class="p-5 py-1 mb-4 bg-light rounded-3">
+        <div class="container-fluid py-5">
+          <iframe class="cardborder"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d627.8007141151722!2d3.8844257020263466!3d50.99392343470661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c39efecf302eef%3A0xca8459ef3f927eb4!2sEsdoornlaan%209%2C%209230%20Wetteren!5e0!3m2!1snl!2sbe!4v1641034294162!5m2!1snl!2sbe" width="400" height="300" style="border: 1px;" allowfullscreen="" loading="lazy"></iframe>
+          <h1 class="display-5 fw-bold">Contact us</h1>
+          <br/>
+          <p class="col-md-8 fs-4"><i class="fas fa-envelope"></i> : {{who.whoemail}}</p>
+          <br/>
+          <p class="col-md-8 fs-4"><i class="fas fa-phone"></i> : {{who.whophone}}</p>
+          <br/>
+          <p class="col-md-8 fs-4"><i class="fas fa-map-marker-alt"></i>  : {{who.whoaddress}}</p>
+          <br/>
+        </div>
       </div>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row row-cols-1 g-3">
-        {% for who in whos.all %}
-        <div class="col">
-          <div class="card bggreen cardborder h-100">
-            <h2 class="card-title text-center p-1 lightyellow my-0"> {{who.whofirstname}} {{who.wholastname}}</h2>
-            <a class="text-center" href="#" target="_blank" style="cursor: pointer;"><img class="img-fluid cardimg my-0" src="{{ who.whoimage.url }}"></img></a>
-            <div class="card-body text-left d-flex flex-column lightyellow">
-              <p class="card-text">{{ who.whobody | linebreaks }}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                </div>
-              </div>
-            </div>
+  
+      <div class="row align-items-md-stretch">
+        <div class="col-md-6">
+          <div class="h-100 p-5 text-white bg-dark rounded-3">
+            <img class="img-fluid cardimg my-0" src="{{ who.whoimage.url }}"></img>
+            <h2>{{who.whofirstname}} {{who.wholastname}}</h2>
+            <p>{{ who.whobody | linebreaks }}</p>
+            <a class="btn btn-outline-light" target="_blank" href="https://www.linkedin.com/in/pieter-de-geyndt/"type="button"><i class="fab fa-linkedin-in"></i></a>
           </div>
+        </div>
+        <div class="col-md-6">
+          <div class="h-100 p-5 bg-light border rounded-3">
+            <h2> Certificates</h2>
+            <p>{{ who.whocertifications | linebreaks }}</p>
+            <h2> Resume <a class="afooter" target="_blank" href="{{ who.whocv.url }}"><i class="bi bi-file-pdf"></i></a>
+            <br/>
+            <img class="img-fluid logoinpage my-0" src="{% static 'Webistebg.gif'%}"></img>
+          </div>
+        </div>
+      </div>
         {% endfor %}
 </main>
 
 <!--Footer -->
+<a href="{% url 'test' %}#top"><i id="buttontotop"class="button-totop fas fa-angle-double-up"></i></a>
 <footer class="d-flex justify-content-center bgdarkblue text-white-50">
   <p>&copy;<a href="https://www.Test2Impress.be/" class="afooter text-white">Test2Impress</a> - {% now "Y" %}.</p>
 </footer>
-
 
     <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
